--- a/components/public/index.html
+++ b/components/public/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>components</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but components doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="format-detection" content="telephone=no,email=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!--transmap-->
+    <script src="https://api.95155.com/loadapi?k=623A882F-430E-4B1E-B071-3FAC692AE18F"></script>
+    <!--baidumap-->
+    <script src="https://api.map.baidu.com/api?v=2.0&ak=F510946b895547b54bb0db381c29e197&s=1"></script>
+    <!--amap-->
+    <script src="https://webapi.amap.com/maps?v=1.4.15&key=677d1b13eab5657858fb4339c6a69e99"></script>
+</head>
+<body>
+<noscript>
+    <strong>We're sorry but vue_src doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
